# py-zopfli

./: .gitignore  .gitmodules  .travis.yml  MANIFEST.in  README.md  README.rst  appveyor.yml  config.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
src/: zopflimodule.c
src/zopfli/: png.py  pureflate.py  zlib.py
tests/: test_zlib.py  test_zopfli.py  tests.py
zopfli/: zopflimodule.c
